Fix word break in messages

--- a/src/app/modules/jukebox/components/chat/chat.component.scss
+++ b/src/app/modules/jukebox/components/chat/chat.component.scss
@@ -15,7 +15,8 @@
 }
 
 .message-contents {
-    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .message {
